[package]
name = "acestream_client"
version = "0.1.0"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]
description = "Acestream client written in Rust"
repository = "https://github.com/rnbdev/acestream-client"
license-file = "LICENSE"

[dependencies]
reqwest = "0.8.6"
crossbeam = "0.3.2"
clap = "2.32.0"
serde_derive = "1.0.69"
serde = "1.0.69"
serde_json = "1.0.22"

[profile.release]
opt-level = 3
