[package]
name = "acestream_client"
version = "0.1.1"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]
description = "Acestream client written in Rust"
repository = "https://github.com/rnbdev/acestream-client"
license-file = "LICENSE"

[dependencies]
reqwest = '*'
crossbeam = '*'
clap = '*'
serde_derive = '*'
serde = '*'
serde_json = '*'

[profile.release]
opt-level = 3
